--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -67,7 +67,7 @@
 
                 <TextView
                     style="@style/ItemCategoryStyle"
-                    android:text="Quantity: " />
+                    android:text="In stock: " />
 
                 <!-- Dummy view takes up maximum space to right align everything-->
                 <View
@@ -107,14 +107,18 @@
 
             </LinearLayout>
 
+            <!-- Description field -->
             <TextView
                 style="@style/ItemCategoryStyle"
                 android:text="Description: " />
 
             <TextView
                 android:id="@+id/item_description_field"
+                android:paddingTop="16dp"
+                android:paddingBottom="16dp"
                 style="@style/ItemFieldStyle" />
 
+            <!-- Tags field -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -123,39 +127,49 @@
                 <TextView
                     style="@style/ItemCategoryStyle"
                     android:paddingBottom="16dp"
+                    android:paddingRight="16dp"
                     android:text="Tags: " />
 
-                <TextView
-                    android:id="@+id/item_tag1_field"
-                    android:layout_width="wrap_content"
+                <org.apmem.tools.layouts.FlowLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="@style/ItemFieldStyle"
-                    android:layout_margin="4dp"
-                    android:background="@drawable/tag_box"
-                    android:text="Tag1"
-                    android:textColor="@android:color/white"/>
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/item_tag2_field"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    style="@style/ItemFieldStyle"
-                    android:layout_margin="4dp"
-                    android:background="@drawable/tag_box"
-                    android:text="Tag2"
-                    android:textColor="@android:color/white"/>
+                    <TextView
+                        android:id="@+id/item_tag1_field"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/ItemFieldStyle"
+                        android:layout_margin="8dp"
+                        android:background="@drawable/tag_box"
+                        android:text="Tag1"
+                        android:textColor="@android:color/white"/>
 
-                <TextView
-                    android:id="@+id/item_tag3_field"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    style="@style/ItemFieldStyle"
-                    android:layout_margin="4dp"
-                    android:background="@drawable/tag_box"
-                    android:text="Tag3"
-                    android:textColor="@android:color/white"/>
+                    <TextView
+                        android:id="@+id/item_tag2_field"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/ItemFieldStyle"
+                        android:layout_margin="8dp"
+                        android:background="@drawable/tag_box"
+                        android:text="Tag2"
+                        android:textColor="@android:color/white"/>
+
+                    <TextView
+                        android:id="@+id/item_tag3_field"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/ItemFieldStyle"
+                        android:layout_margin="8dp"
+                        android:background="@drawable/tag_box"
+                        android:text="Tag3"
+                        android:textColor="@android:color/white"/>
+
+                </org.apmem.tools.layouts.FlowLayout>
 
             </LinearLayout>
+
+
 
         </LinearLayout>
 
