--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -31,6 +31,9 @@
                 android:layout_height="wrap_content"
                 android:scaleType="centerCrop"
                 android:src="@drawable/image_prompt"
+                android:adjustViewBounds="true"
+                android:maxWidth="380dp"
+                android:maxHeight="380dp"
                 app:layout_collapseMode="parallax" />
 
             <android.support.v7.widget.Toolbar
